--- a/8html/214_index.html
+++ b/8html/214_index.html
@@ -5,6 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Exercícios HTML</title>
+    <style>
+        #conteudo {
+            padding: 30px 0px;
+        }
+    </style>
 </head>
 <body>
     <header>
@@ -12,11 +17,12 @@
     </header>
     <nav>
         <a href="exercicios/214_teste.html">00 - Teste</a> | 
-        <a href="exercicios/214_temp.html">Tempppp</a>
+        <a href="exercicios/216_texto1.html">01 - Texto1</a> |
+        <a href="exercicios/217_texto2.html">02 - Texto2</a> |
+        
     </nav>
     <section id="conteudo"></section>
     <footer>
-        <br>
         Curso de web moderno
     </footer>
     <script>
