--- a/8html/214_index.html
+++ b/8html/214_index.html
@@ -19,6 +19,8 @@
         <a href="exercicios/214_teste.html">00 - Teste</a> | 
         <a href="exercicios/216_texto1.html">01 - Texto1</a> |
         <a href="exercicios/217_texto2.html">02 - Texto2</a> |
+        <a href="exercicios/218_listas.html">03 - Listas</a> |
+        <a href="exercicios/219_listaAninhada.html">04 - Listas Aninhadas</a> |
         
     </nav>
     <section id="conteudo"></section>
