--- a/8html/214_index.html
+++ b/8html/214_index.html
@@ -21,6 +21,8 @@
         <a href="exercicios/217_texto2.html">02 - Texto2</a> |
         <a href="exercicios/218_listas.html">03 - Listas</a> |
         <a href="exercicios/219_listaAninhada.html">04 - Listas Aninhadas</a> |
+        <a href="exercicios/221_links.html">05 - Links</a> |
+        <a href="exercicios/223_tabela.html">06 - Tabelas</a> |
         
     </nav>
     <section id="conteudo"></section>
