--- a/8html/214_index.html
+++ b/8html/214_index.html
@@ -23,6 +23,7 @@
         <a href="exercicios/219_listaAninhada.html">04 - Listas Aninhadas</a> |
         <a href="exercicios/221_links.html">05 - Links</a> |
         <a href="exercicios/223_tabela.html">06 - Tabelas</a> |
+        <a href="exercicios/form/form.html">07 - Formulários</a> |
         
     </nav>
     <section id="conteudo"></section>
