--- a/8html/214_index.html
+++ b/8html/214_index.html
@@ -24,6 +24,7 @@
         <a href="exercicios/221_links.html">05 - Links</a> |
         <a href="exercicios/223_tabela.html">06 - Tabelas</a> |
         <a href="exercicios/form/form.html">07 - Formulários</a> |
+        <a href="exercicios/imagens.html">08 - Imagens</a> |
         
     </nav>
     <section id="conteudo"></section>
