--- a/8html/214_index.html
+++ b/8html/214_index.html
@@ -24,7 +24,8 @@
         <a href="exercicios/221_links.html">05 - Links</a> |
         <a href="exercicios/223_tabela.html">06 - Tabelas</a> |
         <a href="exercicios/form/form.html">07 - Formulários</a> |
-        <a href="exercicios/imagens.html">08 - Imagens</a> |
+        <a href="exercicios/228_imagens.html">08 - Imagens</a> |
+        <a href="exercicios/231_video.html">09 - Vídeo</a> |
         
     </nav>
     <section id="conteudo"></section>
