--- a/8html/214_index.html
+++ b/8html/214_index.html
@@ -26,6 +26,7 @@
         <a href="exercicios/form/form.html">07 - Formulários</a> |
         <a href="exercicios/228_imagens.html">08 - Imagens</a> |
         <a href="exercicios/231_video.html">09 - Vídeo</a> |
+        <a href="exercicios/233_tagsNaoVisuais.html">10 - Tags não visuais</a> |
         
     </nav>
     <section id="conteudo"></section>
