--- a/css/css/seletores.html
+++ b/css/css/seletores.html
@@ -6,7 +6,24 @@
     <title>CSS Selectors</title>
     <link rel="stylesheet" href="css/tag.css">
     <style>
-        /* ... */
+        /* * (seletor universal) */
+        /* .tag (todos marcados com a classe "tag") */
+        /* #aprovados (apenas o id "aprovados") */
+        /* #aninhado > div ("div" diretamente dentro de aninhado) */
+        /* #aninhado section (qualquer "section" dentro de aninhado) */
+        /* p + ul (qualquer "ul" que esteja logo apos "p") */
+        /* p ~ ol (qualquer "ol" dentro de "p") */
+        /* [feira] (todos elementos com atributo "feira") */
+        /* [feira~=escritorio] (elementos que contenham esse atributo em "feira") */
+        /* span:nth-child(1) (o 1º filho de alguém que seja do tipo span) */
+        /* section > :nth-child(odd) (todos os filhos ímpares de "section") */
+        /* section > :nth-child(even) (todos os filhos pares de "section") */
+        /* section > span:nth-of-type(2) (o 2º elemento do tipo span em "section") */
+
+        #aninhado section {
+            color: #ff0;
+            background-color: #f77;
+        }
     </style>
 </head>
 
@@ -29,7 +46,7 @@
             </ol>
             <div id='aninhado' class='tag'>
                 <div class="tag">
-                    <section class='tag'>
+                    <section class='tag nolabel'>
                         <span class='tag'>1</span>
                         <p class='tag'>2</p>
                         <span class='tag'>3</span>
