--- a/css/css/heranca.html
+++ b/css/css/heranca.html
@@ -4,14 +4,32 @@
 <head>
     <meta charset="UTF-8">
     <title>Herança</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=DynaPuff&display=swap" rel="stylesheet">
     <style>
-        /* ... */
+        body {
+            font-family: 'DynaPuff', cursive;
+            font-size: 40px;
+            border: solid 3px red;
+            padding: 50px;
+        }
+
+        div {
+            border: inherit; /*Usado para herdar parametros que não são herdados por padrão*/
+            padding: inherit;
+        }
     </style>
 </head>
 
 <body>
     <h1>Herança</h1>
-    <div>Estou herdando</div>
+    <div>Estou herdando
+
+    <span><p>
+        teste
+    </p></span>
+</div>
 </body>
 
 </html>
