--- a/css/css/cores.html
+++ b/css/css/cores.html
@@ -11,6 +11,17 @@
             https://coolors.co/
             http://paletton.com/
         */
+
+        body {
+            background-color: green;
+            background-color: #00ff00;
+            background-color: #abc;
+            background-color: #e928;
+            background-color: rgb(55, 110, 220);
+            background-color: rgba(55, 110, 220, .5);
+            background-color: hsl(299, 43%, 37%);
+            background-color: hsla(299, 43%, 37%, 43%);
+        }
     </style>
 </head>
 
