--- a/css/css/unidades1.html
+++ b/css/css/unidades1.html
@@ -5,7 +5,29 @@
     <meta charset="UTF-8">
     <title>Unidades #01</title>
     <style>
-        /* ... */
+        .unidades-absolutas {
+            position: absolute; /*Não tem haver com as unidades absolutas*/
+            font-size: 40px;
+            padding: 20px;
+            border: solid 5px #222;
+            margin: 30px;
+            width: 4cm; /*Pouco Usado*/
+            height: 20mm; /*Pouco Usado*/
+            top: 150px;
+            left: 200px;
+        }
+
+        .unidades-relativas { /*É uma boa prática utilizar por questões de acessibilidade*/
+            position: absolute;
+            font-size: 4em;
+            padding: 5%;
+            border: solid 1vw #222;
+            margin: .8%;
+            width: 20vw;
+            height: 15vh;
+            bottom: 5%;
+            right: 5%;
+        }
     </style>
 </head>
 
