--- a/css/css/flexbox3.html
+++ b/css/css/flexbox3.html
@@ -6,7 +6,20 @@
     <title>Flexbox #03</title>
     <link rel="stylesheet" href="css/tag.css">
     <style>
-        /* ... */
+        .flex-container {
+            display: flex;
+        }
+
+        .flex-container div {
+            flex-basis: 100px; /*Determina o tamanho do elemento no sentido do main axis*/
+            width: 200px; /*Caso já exista um flex-basis no mesmo sentido ele terá prioridade*/
+        }
+
+        .flex-container div:nth-child(4) {
+            /*1º grow | 2º shrink | 3º basis*/
+            flex: 3 6 100px; /*shortcut property*/
+        }
+
     </style>
 </head>
 
