--- a/css/css/flexboxMenu.html
+++ b/css/css/flexboxMenu.html
@@ -51,9 +51,21 @@
             background: #f50a31;
             color: #fff;
         }
-        /* ==================== */
-        /* Solução com Flex Box */
-        /* ==================== */
+        
+        .cabecalho {
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+        }
+
+        .menu {
+            flex-grow: 10;
+        }
+
+        .menu ul{
+            display: flex;
+            margin-left: 5px;
+        }
     </style>
 </head>
 
