--- a/css/css/cssgrid3.html
+++ b/css/css/cssgrid3.html
@@ -6,7 +6,39 @@
     <title>CSS Grid #03</title>
     <link rel="stylesheet" href="css/tag.css">
     <style>
-        /* ... */
+        * {
+            padding: 0;
+            margin: 0;
+        }
+
+        header {grid-area: cabecalho;} /*Dando "apelidos" para o elemento*/
+        nav {grid-area: navegacao;}
+        main {grid-area: conteudo;}
+        footer {grid-area: rodape;}
+        
+        body {
+            display: grid;
+            min-height: 100vh; /*A altura mínima é 100% da tela disponível para o browser*/
+            grid-template-columns: 300px 1fr;
+            grid-template-rows: 100px 1fr 100px;
+            grid-template-areas: /*Basicamente é passado o nome da área que ocupará cada espaço*/
+                'cabecalho cabecalho'
+                'navegacao conteudo'
+                'rodape rodape';
+        }
+
+        @media(max-width: 700px) { /*Fazendo um display alternativo para quando a largura for menor que 700px*/
+            body {
+                grid-template-columns: 1fr;
+                grid-template-rows: 80px 1fr 100px;
+                grid-template-areas:
+                    'navegacao'
+                    'conteudo'
+                    'rodape';
+            }
+
+            header {display: none;}
+        }
     </style>
 </head>
 
