--- a/dom/acessandoAtributos1.html
+++ b/dom/acessandoAtributos1.html
@@ -15,7 +15,29 @@
         <img src='http://files.cod3r.com.br/curso-web/logo-estreita.png' alt='logo'>
     </div>
     <script>
-        // ...
+        const img = document.querySelector('img')
+        console.log('getAttribute:', img.getAttribute('src')) // 1 Maneira de acessar um atributo
+        console.log('src:', img.src) // 2 Maneira de acessar um atributo
+        console.log('["src"]:', img['src']) // 3 Maneira de acessar um atributo
+        console.log('alt:', img.alt)
+        
+        console.log('')
+        console.log('Elemento "img"..............') // Atributos implícitos a todos os elementos:
+        console.log('NodeType:', img.nodeType) // É o nº que representa esse tipo. Lista em (https://www.w3schools.com/jsref/prop_node_nodetype.asp)
+        console.log('Nodename:', img.nodeName) // É o nome do tipo do elemento selecionado
+
+        const src = img.getAttributeNode('src')
+        console.log('')
+        console.log('Atributo "src"..............')
+        console.log('NodeType:', src.nodeType)
+        console.log('NodeName:', src.nodeName)
+        console.log('NodeValue:', src.nodeValue) // nodeValue é o valor presente na tag html, pode ser alterado
+
+        const link = document.querySelector('a')
+        console.log('href:', link.href)
+        console.log('firstChild.nodeType:', link.firstChild.nodeType) // O tipo node do 1º filho de 'link'
+        link.firstChild.nodeValue = 'Novo Texto' // Atribuindo um novo valor ao nodeValue
+        link.innerHTML = 'Novo Texto2' // Outra maneira de alterar o nodeValue
     </script>
 </body>
 
