--- a/dom/acessandoAtributos3.html
+++ b/dom/acessandoAtributos3.html
@@ -16,7 +16,12 @@
         </ul>
     </div>
     <script>
-        // ...
+        const lista = document.querySelector('#compras')
+        // Somente Leitura
+        console.log(lista.attributes)
+        console.log(lista.attributes[0])
+        console.log(lista.attributes.destino)
+        console.log(lista.attributes['data-urgencia'])
     </script>
 </body>
 
