--- a/dom/trabalhandoComEventos1.html
+++ b/dom/trabalhandoComEventos1.html
@@ -9,7 +9,7 @@
 
 <body class="conteudo exercicio">
     <div>
-        <!--onclick="naveharEm5s(event)"--> <!--1 Maneira de executar (mais explícita)-->
+        <!--onclick="navegarEm5s(event)"--> <!--1 Maneira de executar (mais explícita)-->
         <a espera-um-pouco href="https://google.com.br">Google</a>
     </div>
     <script>
