--- a/dom/flappy.html
+++ b/dom/flappy.html
@@ -9,7 +9,7 @@
 </head>
 
 <body class="conteudo">
-    <h1 class="titulo" id="areaDoTitulo">Flappy Bird</h1>
+    <h1 class="titulo" id="areaDoTitulo" onclick="animar()">Flappy Bird</h1>
 
     <div wm-flappy ></div>
     
