--- a/vue/exercicios/estilo.html
+++ b/vue/exercicios/estilo.html
@@ -12,9 +12,17 @@
     </style>
 </head>
 <body class="exercicio">
-
+    <div id="app" @click="aplicaCor = !aplicaCor"
+        :class="{vermelho: aplicaCor}">
+        Teste
+    </div>
     <script>
-        // ...
+        new Vue({
+            el: "#app",
+            data: {
+                aplicaCor: false
+            }
+        })
     </script>
 </body>
 </html>
